--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postal-codes-js": "^2.5.2",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-dropdown-picker": "^5.1.23",
     "react-native-elements": "^3.4.2",
     "react-native-geocoding": "^0.5.0",
