done till item preview with feedback in categories

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-get-location": "^2.1.2",
     "react-native-maps": "^0.28.0",
     "react-native-masked-text": "^1.13.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.6.0",
     "react-native-searchable-dropdown": "^1.1.3",
