--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-picker/picker": "^1.16.7",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.21.1",
@@ -23,10 +24,12 @@
     "react-native-dropdown-picker": "^5.1.23",
     "react-native-elements": "^3.4.2",
     "react-native-geocoding": "^0.5.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-get-location": "^2.1.2",
     "react-native-maps": "^0.28.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.6.0",
     "react-native-searchable-dropdown": "^1.1.3",
